--- a/CSS/style.css
+++ b/CSS/style.css
@@ -10,6 +10,11 @@
     border: 3px solid;
 }
 
+body {
+  font-family: Arial;
+}
+
+
 #logo {
     height: 100%;
     width: 20%;
@@ -37,6 +42,12 @@
     margin: 5px 5px 5px 5px;
     border: 2px solid;
     height: 50px;
+}
+
+#navigationMenu > li:hover {
+  cursor: pointer;
+  background-color: #EEE;
+  color: #AAA;
 }
 
 #productList {
