--- a/CSS/style.css
+++ b/CSS/style.css
@@ -32,7 +32,7 @@ body {
 
 #navigationMenu {
     padding: 0 0 0 0;
-    width: 20%;
+    width: 250px;
 }
 
 #navigationMenu > li {
@@ -51,7 +51,17 @@ body {
 }
 
 #productList {
-    width: 80%
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    margin: 5px;
+}
+
+.product {
+    width: 30%;
+    border: 2px solid;
+    text-align: center;
+    margin: 10px;
 }
 
 #footer {
