--- a/CSS/style.css
+++ b/CSS/style.css
@@ -32,7 +32,7 @@ body {
 
 #navigationMenu {
     padding: 0 0 0 0;
-    width: 250px;
+    width: 200px;
 }
 
 #navigationMenu > li {
@@ -51,17 +51,52 @@ body {
 }
 
 #productList {
+    width: 800px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    margin: 5px;
 }
 
 .product {
-    width: 30%;
+    height: 250px;
+    width: 26%;
     border: 2px solid;
     text-align: center;
-    margin: 10px;
+    margin: 10px 5px;
+    padding: 20px 20px 0px 20px;
+}
+
+.product:hover {
+    cursor: pointer;
+    background-color: #EEE;
+}
+
+.product:hover .productPrice {
+    display: block;
+    background-color: #989898;
+}
+
+.product > .productName {
+    vertical-align: -webkit-baseline-middle;
+}
+
+.product > .productInfo {
+    height: 90%;
+    position: relative;
+}
+
+.productInfo > .productImage {
+    height: 100%;
+    width: 100%;
+}
+
+.productInfo > .productPrice {
+    display: none;
+    position: absolute;
+    padding: 5px 0px;
+    left: 0;
+    right: 0;
+    bottom: 0;
 }
 
 #footer {
