--- a/CSS/style.css
+++ b/CSS/style.css
@@ -84,6 +84,16 @@ body {
     background-color: #989898;
 }
 
+.product:hover .cartOverlay {
+    display: block;
+    opacity: 0.5;
+    background-color: #989898;
+}
+
+.product:hover .cartButtons {
+    display: inline-block;
+}
+
 .product > .productName {
     vertical-align: -webkit-baseline-middle;
 }
@@ -94,8 +104,44 @@ body {
 }
 
 .productInfo > .productImage {
+    position: relative;
     height: 100%;
     width: 100%;
+}
+
+.productInfo > .cartOverlay {
+    display: none;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
+
+.productInfo > .cartButtons {
+    display: none;
+    position: absolute;
+    top: 40%;
+    left: 10%;
+    right: 10%;
+    vertical-align: top;
+}
+
+.cartButtons > button {
+    padding: 10px;
+    border-radius: 10px;
+    border: none;
+    font-size: 16px;
+    cursor: pointer;
+    margin: 5px;
+}
+
+.addButton {
+    background: #169a40;
+}
+
+.removeButton {
+    background: #c41b13;
 }
 
 .productInfo > .productPrice {
