--- a/CSS/style.css
+++ b/CSS/style.css
@@ -94,6 +94,10 @@ body {
     display: inline-block;
 }
 
+.product:hover .outOfStockMessage {
+    display: block;
+}
+
 .product > .productName {
     vertical-align: -webkit-baseline-middle;
 }
@@ -127,6 +131,18 @@ body {
     vertical-align: top;
 }
 
+.productInfo > .outOfStockMessage {
+    display: none;
+    color: red;
+    font-size: 20px;
+    font-weight: bold;
+    position: absolute;
+    padding: 5px 0;
+    left: 0;
+    right: 0;
+    bottom: 25%;
+}
+
 .cartButtons > button {
     padding: 10px;
     border-radius: 10px;
@@ -142,6 +158,7 @@ body {
 
 .removeButton {
     background: #c41b13;
+    visibility: hidden;
 }
 
 .productInfo > .productPrice {
